--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
@@ -31,7 +32,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Duckk</a></h1>
+      <h1 class="logo"><a href="index.html">Student</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -90,7 +91,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Nguyen Duc</span></p>
-                        <p><span class="title-s">Profile: </span> <span>A Web Coder</span></p>
+                        <p><span class="title-s">Work: </span> <span>A Fontend Web Coder</span></p>
                         <p><span class="title-s">Email: </span> <span><a href="mailto:thienduc.nguyen098@gmail.com">thienduc.nguyen098@gmail.com</a></span></p>
                         <p><span class="title-s">Phone: </span> <span><a href="tel:+84823565831">+84 823 565 831</a> </span></p>
                       </div>
@@ -144,6 +145,28 @@
                     <p class="lead">
                       - Listen Music
                     </p>
+                  </div>
+                  <div class="wrapperr">
+                    <div class="icon facebook" onclick=" location.href = 'https://www.facebook.com/ntduc106' ">
+                        <i class="fab fa-facebook-f"></i>
+                        <span class="tooltip">Facebook</span>
+                    </div>
+                    <div class="icon instagram" onclick=" location.href = 'https://www.instagram.com/duck.fpoly/' ">
+                      <i class="fab fa-instagram"></i>
+                      <span class="tooltip">Instagram</span>
+                    </div> 
+                    <div class="icon github" onclick=" location.href = 'https://github.com/duckfpoly'">
+                        <i class="fab fa-github"></i>
+                        <span class="tooltip">Github</span>
+                    </div>
+                    <div class="icon tiktok" onclick=" location.href = 'https://www.tiktok.com/@nguyenducsb' ">
+                        <i class="fab fa-tiktok"></i>
+                        <span class="tooltip">Tiktok</span>
+                    </div>
+                    <div class="icon youtube">
+                        <i class="fab fa-youtube"></i>
+                        <span class="tooltip">Youtube</span>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -221,7 +244,7 @@
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box counter-box pt-4 pt-md-0">
               <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-check"></i></span>
+                <span class="ico-circle pt-2"><i class="bi bi-check"></i></span>
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="counter purecounter"></p>
@@ -232,7 +255,7 @@
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
+                <span class="ico-circle pt-2"><i class="bi bi-journal-richtext"></i></span>
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="counter purecounter"></p>
@@ -243,7 +266,7 @@
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-people"></i></span>
+                <span class="ico-circle pt-2"><i class="bi bi-people"></i></span>
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="counter purecounter"></p>
@@ -254,7 +277,7 @@
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-award"></i></span>
+                <span class="ico-circle pt-2"><i class="bi bi-award"></i></span>
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="counter purecounter"></p>
@@ -634,16 +657,16 @@
                     <div class="more-info">
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> 120, Hoang Quoc Viet, Cau Giay, Ha Noi</li>
-                        <li><span class="bi bi-phone"></span>+84823 565 831</li>
+                        <li><span class="bi bi-phone"></span>+84 823 565 831</li>
                         <li><span class="bi bi-envelope"></span>thienduc.nguyen098@gmail.com</li>
                       </ul>
                     </div>
-                    <div class="socials">
+                    <!-- <div class="socials">
                       <ul>
                         <li><a target="_blank" href="https://www.facebook.com/ntduc106"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a target="_blank" href="https://www.instagram.com/duck.fpoly"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                       </ul>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
