--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#work">Source Code</a></li>
+          <li><a class="nav-link scrollto " href="#work">Project</a></li>
           <li><a class="nav-link scrollto " href="#blog">Music</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
@@ -296,7 +296,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h1 class="title">
-                Source Code Basic
+                Project
               </h1>
               <p class="subtitle-a">
                 By Nguyen Duc
@@ -306,7 +306,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <div class="work-box">
               <a href="assets/img/c.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
@@ -404,7 +404,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/img/php.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -430,7 +430,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <div class="work-box">
               <a href="assets/img/sql.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
@@ -503,7 +503,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section><!-- End Portfolio Section -->
@@ -709,7 +709,6 @@
   <script src="js/music-list.js"></script>
   <script src="js/script.js"></script>
   
-
 </body>
 
 </html>
