--- a/index.html
+++ b/index.html
@@ -415,15 +415,14 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">PHP</h2>
+                    <h2 class="w-title">Xshop</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Introduction</span> / <span class="w-date">Aug, 2022</span>
+                      <span class="w-ctegory">PHP OOP MVC</span> / <span class="w-date">Oct, 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"><i class="bi bi-arrow-right-short"></i></a>
-
+                      <a href="https://thendstore.000webhostapp.com/"><i class="bi bi-arrow-right-short"></i></a>
                     </div>
                   </div>
                 </div>
